# arbitrage-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
backend/: config.py  db.py  main.py  metrics.py  models.py
backend/api/: routes.py  websocket.py
backend/clients/: espn.py  kalshi.py
backend/execution/: executor.py  risk.py  simulator.py
backend/scanner/: engine.py  matcher.py  sports.py
backend/strategy/: base.py  evaluator.py  late_game.py
docs/: configuration.md  scanner.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: markets.test.ts  pnl.test.ts  strategy.test.ts  teams.test.ts  time.test.ts
frontend/src/api/: hooks.ts  strategy.ts  useWebSocket.ts
frontend/src/components/: GameCard.tsx  Layout.tsx  PnLChart.tsx  TradeTable.tsx
frontend/src/hooks/: useStrategyEditors.ts
frontend/src/pages/: Dashboard.tsx  LiveGames.tsx  Settings.tsx  Simulation.tsx  TradeHistory.tsx
frontend/src/types/: index.ts
frontend/src/utils/: markets.ts  pnl.ts  teams.ts  time.ts
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml
monitoring/: grafana-dashboard.json  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
tests/: test_kalshi_client.py  test_late_game_strategy.py  test_matcher.py  test_metrics_instrumentation.py  test_risk.py  test_scanner_intervals.py  test_settlement.py  test_sport_configs.py
